     function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
   * Added new function wesnoth.remove_modifications, which removes applied
     modifications of the chosen type from a unit. The most efficient use is to
     remove all modifications with a specific duration value.
     Also callable as u:remove_modifications.
* Performance:
   * When a heuristic determines that it's probably faster, the game predicts battle
     outcome by simulating a few thousand fights instead of calculating exact
     probabilities. This method is inexact, but in very complex battles (extremely
     high HP, drain, slow, berserk, etc.) it's significantly faster than the default
     damage calculation method.

Version 1.13.5:
 * Campaigns:
   * An Orcish Incursion:
     * Linaera can recruit Mage, and cannot recruit Elves
   * Heir to the Throne:
     * Add journey tracks for 19c/20b path.
     * New sprites for Li'sar.
     * S10: Clarify objectives and change egg image on capture.
     * S19c: Removed the undead and the swamps.
   * Tutorial
     * Improve translatability for languages with gender-dependent pronouns
     * S1: Fix unit being deselected after the select message
     * S2: Highlight (outline) talked-about locations
   * Legend of Wesmere
     * S3: fix bug which silently disabled Urudin retreat AI
 * Graphics:
   * Updated generic portrait of Mermaid Initiate.
   * Added generic portrait for Giant Spider.
 * Language and i18n:
   * Updated translations: British English, Galician, German, Italian, Japanese,
     Polish, Portuguese, RACV, Russian, Scottish Gaelic, Spanish
 * Networking:
   * Reworked the multiplayer server to use asio functions for networking
     operations instead of SDL_net, thus it no longer depends on SDL_net and SDL.
   * The client now uses boost::asio for communication with wesnothd too.
 * Removed support for SDL 1.2. SDL 2 is now the only supported version.
 * Terrains: