@@ -201,6 +201,7 @@ public:
 	bool run_event(game_events::queued_event const &);
 	void push_builtin_effect();
 	void set_wml_action(std::string const &, game_events::wml_action::handler);
+	void set_wml_condition(std::string const &, bool(*)(const vconfig&));
 	bool run_wml_action(std::string const &, vconfig const &,
 		game_events::queued_event const &);
 	bool run_filter(char const *name, unit const &u);
